<resources>
    <string name="app_name">Ням-Ням</string>
    <string name="choose_language">Choose language</string>
    <string name="english">English</string>
    <string name="ukrainian">Українська</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="welcome_text">Welcome to Ням-Ням!</string>
    <string name="section_1">Menu</string>
    <string name="section_2">Shopping list</string>
    <string name="section_3">Add new dish</string>
    <string name="back">Back</string>
    <string name="setting_menu_title">Settings</string>
    <string name="back_button">Back</string>
    <string name="dish_name">Dish name</string>
    <string name="choose_day">Choose day</string>
    <string name="settings_button" translatable="false">Settings button</string>
    <string name="dish_servings">Servings for two: %d</string>
    <string name="updateDishPrice">Update price</string>
    <string name="dish_name_breakfast">Breakfast</string>
    <string name="dish_name_lunch">Lunch</string>
    <string name="dish_name_dinner">Dinner</string>
    <string name="dish_name_snack">Snack</string>
    <string name="or">\ or\ </string>
    <string name="products">Main ingredients: \n%s</string>
    <string name="recipe">Recipe: \n%s</string>
    <string name="possible_price">Possible price: \n%s uah</string>
    <string name="dish_name_second_snack">Second snack</string>
    <string name="replace">replace</string>
    <string name="updating_menu">Updating menu!</string>
    <string name="menu_updated">Menu updated!</string>
    <string name="unit_pcs">pcs</string>
    <string name="unit_ml">ml</string>
    <string name="unit_g">g</string>
    <string name="enter_meal_name">Enter dish name</string>
    <string name="confirm">Confirm</string>
    <string name="generate_menu">Update menu</string>
    <string name="breakfast">Breakfast</string>
    <string name="select_dish">Select dish</string>
    <string name="product_name">Product name</string>
    <string name="servings">Servings for two counts</string>
    <string name="amount">amount (ml, g or pcs)</string>
    <string name="add_product">Add product</string>
    <string name="recipe_optional">Recipe (Optional)</string>
    <string name="save_dish">Save dish</string>
    <string name="add_new_product">Add new product</string>
    <string name="no_menu">No dishes for this day, update menu</string>
    <string name="no_dish_details">Info about this dish is not for everyone!</string>
    <string name="no_units_amount">Amount</string>
    <string name="unit">Unit (ml, g, pcs)</string>
    <string name="price">Price</string>
    <string name="product_url">Product URL</string>
    <string name="save_product">Save product</string>
    <string name="dish_added_successfully">Dish added successfully!</string>
    <string name="please_fill_in_all_fields">Please fill in all fields.</string>
    <string name="product_not_found_add_it_manually">Product not found. Add it manually.</string>
    <string name="please_fill_in_all_product_fields">Please fill in all product fields.</string>
    <string name="product_added_successfully">Product added successfully!</string>
    <string name="error_adding_product">Error adding product: %1$s</string>
    <string name="new_mandatory_product_added">New basic product added!</string>
    <string name="not_valid_product_name">Not valid product name!</string>
    <string name="mandatory_product_removed">Basic product removed!</string>
    <string name="grn">%s uah</string>
    <string name="selected">Selected: %1$s</string>
    <string name="selected_range">Selected: %1$s - %2$s</string>
    <string name="shopping_list_prod_view">%1$s %2$s    %3$s грн</string>
    <string name="remove_product">Remove product</string>
    <string name="mandatory_products">Mandatory products</string>
    <string name="selected_today">Select days</string>
    <string name="show_product_list">Show product list</string>
    <string name="dish_name_sandwich">Sandwich</string>
    <string name="share_menu">Share Menu</string>
    <string name="receive_menu">Receive Menu</string>
    <string name="please_enter_a_valid_dish_name">Please enter a valid dish name.</string>
    <string name="_2f">%.2f</string>
</resources>