<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/productAmountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/no_units_amount"
        android:inputType="number" />

    <EditText
        android:id="@+id/productUnitEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit" />

    <EditText
        android:id="@+id/productPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/productUrlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_url" />

    <Button
        android:id="@+id/saveNewProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_product" />
</LinearLayout>
