<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />
    <TextView
        android:id="@+id/chooseLanguageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/englishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/english" />

    <Button
        android:id="@+id/ukrainianButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="16dp"
        android:text="@string/ukrainian" />

</LinearLayout>
