<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mandatoryProductRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <AutoCompleteTextView
            android:id="@+id/productNameAutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/product_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/plusButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/plusButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_product"
            android:src="@drawable/add_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/minusButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/minusButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/remove_product"
            android:src="@drawable/delete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
