<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/dishNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/dish_name"
        android:textColor="#333333"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dishTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_rounded_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:padding="8dp"
        android:shadowColor="@color/shadow_color"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:textColor="@color/primary_text_color"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/dishServingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/dish_servings"
        android:textColor="#4CAF50"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dishProductsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:lineSpacingExtra="4dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dishRecipeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:lineSpacingExtra="4dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dishPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:lineSpacingExtra="4dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/updateDishPriceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="16dp"
        android:text="@string/updateDishPrice" />

</LinearLayout>
